finish task 4 with bonuses